# search-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
client/templates/: index.html  query.html
data/index_unit_test/docs/: 3.txt
search/: Cargo.toml
search/src/: lib.rs  main.rs
search/src/disk/: bits_reader.rs  bits_writer.rs  file_utils.rs  mod.rs
search/src/engine/: builder.rs  documents.rs  heap.rs  mod.rs  postings.rs  preprocessor.rs  vocabulary.rs
search/src/index/: builder.rs  documents.rs  mod.rs  postings.rs  preprocessor.rs  text.rs  utils.rs  vocabulary.rs
search/src/query/: document_selector.rs  mod.rs
search/test_data/: test_tokenizer
server/: Cargo.toml
server/src/: main.rs
server/templates/: index.html  query.html
src/: index.rs  lib.rs  main.rs  test_utils.rs  trie.rs
src/bits/: reader.rs  writer.rs
src/disk/: bits_reader.rs  bits_writer.rs  file_utils.rs  mod.rs  terms_reader.rs  terms_writer.rs
src/index/: builder.rs  documents.rs  loader.rs  mod.rs  postings.rs  text_utils.rs  vocabulary.rs
src/indexer/: disk_utils.rs  index.rs  mod.rs  text_utils.rs
src/io/: reader.rs  writer.rs
src/query/: document_selector.rs  mod.rs
src/text/: tokens.rs
tests/: read_write_integration_test.rs
