[package]
name = "search"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.8"
rust-stemmers = "1.2.0"
rayon = "1.8.0"
indicatif = { version = "0.17.0", features = ["rayon", "improved_unicode"] }
fxhash = "0.2.1"
tempdir = "0.3.7"
regex = "1"
argparse = "0.2.2"
phf = { version = "0.11.2", features = ["macros"] }
